# fly2sky

./: CMakeLists.txt  Makefile  config.h  config.hpp  drive_control.cpp  drive_control.h  drone.ino  ekf.cpp  filterKalman.h.bkp  fly2sky.ino  imu.cpp  imu.hpp  imuekf.h  joystick.cpp  konfig.h  main.c  main.cpp  mpu.cpp  pid.hpp  simple_mpu9250.h  statespace.py
Tests/BLDC_test/: BLDC_test.ino
Tests/esc_calibration/: esc_calibration.ino
Tests/gps/: gps.ino
Tests/i2c_imu9250_bpm180/: i2c_imu9250_bpm180.ino
Tests/nrf240l_receiver/: nrf240l_receiver.ino
Tests/nrf240l_receiver_button/: nrf240l_receiver_button.ino
Tests/nrf240l_transmitter/: nrf240l_transmitter.ino
Tests/nrf240l_transmitter_button/: nrf240l_transmitter_button.ino
Tests/servo/: servo.ino
doc/: Algorithm.txt  joystick.txt
flight_computer/: camera.py  feature.py
ground_control/: config.h  ground_control.ino
